# push-api-client.py

./: .coveragerc  .dccache  .gitignore  AUTHORS.rst  LICENSE.txt  Pipfile  README.rst  localtest.py  pyproject.toml  renovate.json5  setup.cfg  setup.py
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
docs/: conf.py  index.rst
samples/: createsource.py  deleteonedocument.py  pushbatchofdocuments.py  pushdocumentwithmetadata.py  pushdocumentwithpermissions.py  pushonedocument.py
src/push_api_clientpy/: __init__.py  document.py  documentbuilder.py  platformclient.py  securityidentitybuilder.py  skeleton.py  source.py
tests/: conftest.py  test_docbuilder.py  test_platformclient.py  test_securityidentitybuilder.py  test_skeleton.py
